--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,12 @@ dist: trusty
 sudo: false
 cache: yarn
 
+branches:
+  only:
+  - master
+
 script:
-- yarn hello
-- yarn bye
+- yarn hoge
 
 deploy:
   provider: npm
