--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,12 @@ dist: trusty
 sudo: false
 cache: yarn
 
+branches:
+  only:
+  - "/^v?[0-9\\.]+/"
+
 script:
-- yarn hoge
+- yarn build
 
 deploy:
   provider: npm
