--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,12 @@ language: node_js
 node_js:
 - 10
 
-dist: trusty
-sudo: false
-cache: 
-  - yarn
-  directories:
-    - node_modules
-
 branches:
   only:
   - "/^v?[0-9\\.]+/"
 
 script:
-- yarn build
+- npm run build
 
 deploy:
   provider: npm
