--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "devDependencies": {
     "cowsay": "^1.3.1",
-    "generate-changelog": "^1.7.1",
-    "travis-practice": "^1.10.2"
+    "generate-changelog": "^1.7.1"
   }
 }
