--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,28 @@
 language: node_js
 node_js:
-- 10
+  - 10
 
 dist: trusty
 sudo: false
 cache: yarn
 
-branches:
-  only:
-  - "/^v?[0-9\\.]+/"
+stages:
+  - name: test
+    if: branch = master AND type = pull_request
+  - name: npm deploy
+    if: branch = /^v?[0-9\\.]+/
 
-script:
-- yarn build
+jobs:
+  include:
+    - stage: test
+      script: yarn test
+    - stage: npm deploy
+      script: yarn build
 
 deploy:
   provider: npm
-  email: $NPM_EMAIL
-  api_key: $NPM_TOKEN
+  email: $NPM_EMAIL_DEMO
+  api_key: $NPM_TOKEN_DEMO
   on:
     tags: true
   skip_cleanup: true
