--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ stages:
   - name: test
     if: branch = master AND type = pull_request
   - name: npm deploy
-    if: branch = /^v?[0-9\\.]+/
+    if: branch = "/^v?[0-9\\.]+/"
 
 jobs:
   include:
