--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ stages:
   - name: node hoge
     if: type = pull_request AND branch = hoge/1
   - name: node fuga
-    if: type = pull_request
+    if: type = pull_request AND branch = fuga
 
 jobs:
   include:
