--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache: yarn
 
 stages:
   - name: node hoge
-    if: type = pull_request AND branch = hoge/1
+    if: type = pull_request AND branch = 1
   - name: node fuga
     if: type = pull_request AND branch = fuga
 
