--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache: yarn
 
 stages:
   - name: node hoge
-    if: branch =~ /^hoge.*$/
+    if: pull_request AND branch =~ /^hoge.*$/
   - name: node fuga
     if: type = pull_request AND branch = fuga
 
